--- a/index.html
+++ b/index.html
@@ -6,8 +6,92 @@
     <title>Bootstrap Breakpoints</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <style>
+            :root {
+            --dark-blue: #264653;
+            --light-green: #2a9d8f;
+            --yellow: #b2e96a;
+            --orange: #f4a261;
+            --salmon: #e76f51;
+            }
+            .container {
+            color: var(--dark-blue);
+            font-size: 20px;
+            font-weight: bold;
+            min-height: 50vh;
+            background-color: var(--yellow);
+            }
+
+            .row {
+            border: 1px solid var(--dark-blue);
+            min-height: 50px;
+            }
+
+            [class^="col-"] {
+            border: 1px solid var(--light-green);
+            min-height: 50px;
+            }
+        </style>
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <div class="container">
+      <div class="row">
+        <div class="col">12</div>
+      </div>
+      <div class="row">
+        <div class="col-8">8</div>
+        <div class="col-4">4</div>
+      </div>
+      <div class="row">
+        <div class="col">12</div>
+      </div>
+      <div class="row">
+        <div class="col-6">6</div>
+        <div class="col-6">6</div>
+      </div>
+      <div class="row">
+        <div class="col-4">4</div>
+        <div class="col-8">8</div>
+      </div>
+      <div class="row">
+        <div class="col-4">4</div>
+        <div class="col-4">4</div>
+        <div class="col-4">4</div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-1">1</div>
+        <div class="col-1">1</div>
+        <div class="col-1">1</div>
+        <div class="col-1">1</div>
+        <div class="col-1">1</div>
+        <div class="col-1">1</div>
+        <div class="col-1">1</div>
+        <div class="col-1">1</div>
+        <div class="col-1">1</div>
+        <div class="col-1">1</div>
+        <div class="col-1">1</div>
+        <div class="col-1">1</div>
+      </div>
+      <div class="row">
+        <div class="col-9">9</div>
+        <div class="col-3">3</div>
+      </div>
+      <div class="row">
+        <div class="col">12</div>
+      </div>
+      <div class="row">
+        <div class="col-3">3</div>
+        <div class="col-3">3</div>
+        <div class="col-3">3</div>
+        <div class="col-3">3</div>
+      </div>
+      <div class="row">
+        <div class="col">12</div>
+      </div>
+    </div>
+
   </body>
 </html>
