--- a/challenge-md.html
+++ b/challenge-md.html
@@ -37,28 +37,36 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <div class="container">
       <div class="row">
-        <div class="col">12</div>
+        <div class="col-md-1">1</div>
+        <div class="col-md-1">1</div>
+        <div class="col-md-1">1</div>
+        <div class="col-md-1">1</div>
+        <div class="col-md-1">1</div>
+        <div class="col-md-1">1</div>
+        <div class="col-md-1">1</div>
+        <div class="col-md-1">1</div>
+        <div class="col-md-1">1</div>
+        <div class="col-md-1">1</div>
+        <div class="col-md-1">1</div>
+        <div class="col-md-1">1</div>
       </div>
       <div class="row">
-        <div class="col-8">8</div>
-        <div class="col-4">4</div>
+        <div class="col-md-9">9</div>
+        <div class="col-md-3">3</div>
       </div>
       <div class="row">
-        <div class="col">12</div>
+        <div class="col-md-12">12</div>
       </div>
       <div class="row">
-        <div class="col-6">6</div>
-        <div class="col-6">6</div>
+        <div class="col-md-3">3</div>
+        <div class="col-md-3">3</div>
+        <div class="col-md-3">3</div>
+        <div class="col-md-3">3</div>
       </div>
       <div class="row">
-        <div class="col-4">4</div>
-        <div class="col-8">8</div>
-      </div>
-      <div class="row">
-        <div class="col-4">4</div>
-        <div class="col-4">4</div>
-        <div class="col-4">4</div>
+        <div class="col-md-12">12</div>
       </div>
     </div>
+
   </body>
 </html>
