--- a/challenge-multi.html
+++ b/challenge-multi.html
@@ -36,29 +36,16 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <div class="container">
-      <div class="row">
-        <div class="col">12</div>
-      </div>
-      <div class="row">
-        <div class="col-8">8</div>
-        <div class="col-4">4</div>
-      </div>
-      <div class="row">
-        <div class="col">12</div>
-      </div>
-      <div class="row">
-        <div class="col-6">6</div>
-        <div class="col-6">6</div>
-      </div>
-      <div class="row">
-        <div class="col-4">4</div>
-        <div class="col-8">8</div>
-      </div>
-      <div class="row">
-        <div class="col-4">4</div>
-        <div class="col-4">4</div>
-        <div class="col-4">4</div>
-      </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">12</div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-md-9 col-sm-12">8</div>
+            <div class="col-lg-4 col-md-3 col-sm-12">4</div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">12</div>
+        </div>
     </div>
   </body>
 </html>
