--- a/challenge-sm.html
+++ b/challenge-sm.html
@@ -36,29 +36,30 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <div class="container">
-      <div class="row">
-        <div class="col">12</div>
-      </div>
-      <div class="row">
-        <div class="col-8">8</div>
-        <div class="col-4">4</div>
-      </div>
-      <div class="row">
-        <div class="col">12</div>
-      </div>
-      <div class="row">
-        <div class="col-6">6</div>
-        <div class="col-6">6</div>
-      </div>
-      <div class="row">
-        <div class="col-4">4</div>
-        <div class="col-8">8</div>
-      </div>
-      <div class="row">
-        <div class="col-4">4</div>
-        <div class="col-4">4</div>
-        <div class="col-4">4</div>
-      </div>
+        <div class="row">
+            <div class="col-sm-6">6</div>
+            <div class="col-sm-6">6</div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">4</div>
+            <div class="col-sm-8">8</div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2">2</div>
+            <div class="col-sm-10">10</div>
+        </div>
+        <div class="row">
+            <div class="col-sm-7">7</div>
+            <div class="col-sm-5">5</div>
+        </div>
+        <div class="row">
+            <div class="col-sm-9">9</div>
+            <div class="col-sm-3">3</div>
+        </div>
+        <div class="row">
+            <div class="col-sm-11">11</div>
+            <div class="col-sm-1">1</div>
+        </div>
     </div>
   </body>
 </html>
