--- a/challenge-multi.html
+++ b/challenge-multi.html
@@ -34,6 +34,16 @@
         </style>
   </head>
   <body>
+    <header>
+        <nav>
+            <a href="index.html">Index |</a>
+            <a href="classnotes.html">Class Notes |</a>
+            <a href="challenge-sm.html">Challenge-Sm |</a>
+            <a href="challenge-md.html">Challenge-Sm |</a>
+            <a href="challenge-multi.html">Challenge-Multi</a>
+        </nav>
+    </header>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <div class="container">
         <div class="row">
