--- a/challenge-sm.html
+++ b/challenge-sm.html
@@ -39,7 +39,7 @@
             <a href="index.html">Index |</a>
             <a href="classnotes.html">Class Notes |</a>
             <a href="challenge-sm.html">Challenge-Sm |</a>
-            <a href="challenge-md.html">Challenge-Sm |</a>
+            <a href="challenge-md.html">Challenge-Md |</a>
             <a href="challenge-multi.html">Challenge-Multi</a>
         </nav>
     </header>
